Add edit and remove Bussines rule

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-  "/js/package.js": "/js/package.53d39af14b842c74e036.js",
-  "/css/package.css": "/css/package.d41d8cd98f00b204e9800998ecf8427e.css"
+    "/js/package.js": "/js/package.js?id=8e6c3ce6784f97fd99cc",
+    "/css/package.css": "/css/package.css?id=d41d8cd98f00b204e980",
+    "/js/screen-builder-form-components.js": "/js/screen-builder-form-components.js?id=afbe23aa7f97c93a0004"
 }
