Ejemplo de paquete

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/package.js": "/js/package.js?id=0a355aa40b81ed9f6697",
+    "/js/modeler.js": "/js/modeler.js?id=2dc9cc7277ee611cc595",
+    "/js/package.js": "/js/package.js?id=4d55c0a419f793442ee1",
     "/css/package.css": "/css/package.css?id=d41d8cd98f00b204e980",
-    "/js/screen-builder-form-components.js": "/js/screen-builder-form-components.js?id=5674d87419b81f4b9fc7"
+    "/js/screen-builder-form-components.js": "/js/screen-builder-form-components.js?id=fa13803f937f506e9a0a"
 }
